--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^7.19.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.5.3",
     "react-scripts": "3.4.3"
   },
   "scripts": {
