--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "@firebase/app": "^0.6.10",
     "@firebase/database": "^0.6.11",
     "@firebase/storage": "^0.3.42",
+    "@react-firebase/auth": "^0.2.10",
     "@react-firebase/database": "^0.3.11",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "antd": "^4.6.1",
     "firebase": "^7.19.0",
+    "lodash": "^4.17.20",
     "nanoid": "^3.1.12",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
