Add deploy tools and config

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^7.1.2",
     "antd": "^4.6.1",
     "firebase": "^7.19.0",
+    "firebase-tools": "^8.9.2",
     "lodash": "^4.17.20",
     "nanoid": "^3.1.12",
     "react": "^16.13.1",
@@ -24,7 +25,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "firebase": "firebase"
   },
   "eslintConfig": {
     "extends": "react-app"
