--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.2.2",
     "@firebase/app": "^0.6.10",
     "@firebase/database": "^0.6.11",
     "@firebase/storage": "^0.3.42",
