--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase-tools": "^8.9.2",
     "lodash": "^4.17.20",
     "nanoid": "^3.1.12",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.5.3",
