--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.5.3",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "reflexbox": "^4.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
