--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "antd": "^4.6.1",
+    "classnames": "^2.2.6",
     "firebase": "^7.19.0",
     "firebase-tools": "^8.9.2",
     "lodash": "^4.17.20",
