--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.5.3",
     "react-scripts": "3.4.3",
-    "reflexbox": "^4.0.6"
+    "reflexbox": "^4.0.6",
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
