--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-hook-form": "^6.5.3",
     "react-scripts": "3.4.3",
     "reflexbox": "^4.0.6",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "use-media": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
