--- a/package.json
+++ b/package.json
@@ -25,9 +25,7 @@
     "react-hook-form": "^6.5.3",
     "react-scripts": "3.4.3",
     "react-use": "^15.3.3",
-    "reflexbox": "^4.0.6",
-    "styled-components": "^5.1.1",
-    "use-media": "^1.4.0"
+    "reflexbox": "^4.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
