--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ramda": "^0.27.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-firebase-hooks": "^2.2.0",
     "react-hook-form": "^6.5.3",
     "react-scripts": "3.4.3",
     "react-use": "^15.3.3",
